--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
 
     <body>
+        <h1>Welcome</h1>
         <p>これは簡単なHTMLのサンプルです</p>
         <p>試しにもう一段落追加してみよう。</p>
         <img src="iniadcollab.png" alt="[チーム開発のイメージ画像]">
